# -MIA-Proyecto1_201902302

./: CMakeLists.txt  README.md  main.cpp  montadas.cpp  montadas.h
Analizador de Lenguaje/: Scanner.cpp  lexico.l  main.cpp
Analizer/: Scanner.cpp  encabezado.txt  flex.l  lex.l  lex.yy.c  lexico.l  main.cpp  parser.cpp  parser.h  reader.c  scanner.cpp  scanner.h  sin.tab.c  sin.tab.h  sin.y  sintactico.y
Estructs/: arguments.cpp  diskStructs.h  fileSistemStructs.h  partitionMount.cpp  partitionMount.h
Flow/: rooter.cpp  rooter.h
Graphics/: graficador.cpp  graficador.h
Modules/: UsserModule.cpp  diskModule.cpp  diskModule.h  usserModule.h
resultados/: bm_bloques.txt  bm_inodos.txt  disk.dot  mbr.dot  superBloque.dot  users.txt
